--- a/views/list.ejs
+++ b/views/list.ejs
@@ -1,19 +1,29 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title> To Do List </title>
-  </head>
-  <body>
-    <% if (kindOfDay === "Saturday" || kindOfDay === "Sunday") { %>
-      <h1 style="color: purple"><%=kindOfDay%> ToDo List </h1>
-      <% } else { %>
-          <h1 style="color: blue"><%= kindOfDay%> ToDo List </h1>
-      <% } %>
+
+<head>
+  <meta charset="utf-8">
+  <title> To Do List </title>
+</head>
+
+<body>
+
+  <h1> <%= kindOfDay %> </h1>
+
+  <ul>
+
+    <% for (var i=0 ;i < newListItems.length; i++) { %>
+    <li> <%= newListItems[i] %> </li>
+    <%}%>
+  </ul>
+        <form class="" action="/" method="post">
+          <input type="text" name="newItems" >
+          <button type="submit" name="button"> add </button>
+        </form>
 
 
 
 
+</body>
 
-  </body>
 </html>
