--- a/views/list.ejs
+++ b/views/list.ejs
@@ -4,22 +4,31 @@
 <head>
   <meta charset="utf-8">
   <title> To Do List </title>
+  <link rel="stylesheet" href="/css/styles.css">
 </head>
 
 <body>
 
-  <h1> <%= kindOfDay %> </h1>
+  <div class="box" id="heading">
+    <h1> <%= listTitle %> </h1>
+  </div>
 
-  <ul>
-
-    <% for (var i=0 ;i < newListItems.length; i++) { %>
-    <li> <%= newListItems[i] %> </li>
+  <div class="box">
+    <% for (let i=0 ;i < newListItems.length; i++) { %>
+    <div class="item">
+    <input type="checkbox">
+    <p> <%= newListItems[i] %></p>
+    </div>
     <%}%>
-  </ul>
-        <form class="" action="/" method="post">
-          <input type="text" name="newItems" >
-          <button type="submit" name="button"> add </button>
-        </form>
+
+    <form class="item" action="/" method="post">
+      <input type="text" name="newItems" placeholder="New Item"  autocomplete="off">
+      <button type="submit" name="list" value=<%=listTitle%> > + </button>
+    </form>
+  </div>
+
+
+
 
 
 
