--- a/views/list.ejs
+++ b/views/list.ejs
@@ -1,13 +1,7 @@
-<!DOCTYPE html>
-<html lang="en" dir="ltr">
+<%- include("header"); -%>
 
-<head>
-  <meta charset="utf-8">
-  <title> To Do List </title>
-  <link rel="stylesheet" href="/css/styles.css">
-</head>
 
-<body>
+
 
   <div class="box" id="heading">
     <h1> <%= listTitle %> </h1>
@@ -27,12 +21,4 @@
     </form>
   </div>
 
-
-
-
-
-
-
-</body>
-
-</html>
+<%- include("footer"); -%>
